minors edits and typo/typesetting vigilance
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@151 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -59,7 +59,7 @@ Effective Field Theories (EFTs) are an extremely useful tool for DM searches at 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 For a tree-level interaction between DM and the Standard Model (SM) via some mediator with mass $M$, the EFT approximation corresponds to expanding the propagator 
-in powers of $\Qtr^2/M^2$, truncating at lowest order, and combining the remaining parameters into a single parameter ${M_*}$ (also called $\Lambda$). For an example scenario with a $Z'$-type mediator (leading to some combination of operators D5 to D8 in the EFT limit)
+in powers of $\Qtr^2/M^2$, truncating at lowest order, and combining the remaining parameters into a single parameter ${M_*}$ (also called $\Lambda$). For an example scenario with a $Z^\prime$-type mediator (leading to some combination of operators D5 to D8 in the EFT limit)
 this corresponds to setting
 %
 \be
@@ -101,7 +101,7 @@ the DM mass $m_\text{DM}$, the scale $M_*$ of the interaction, and the cutoff sc
 
 We can use the same technique as above to restrict the signal to the events for which $E_\text{cm}<M_\text{cut}$,  using only these events to derive the exclusion limits on $M_*$ as a function of  $(m_\text{DM},M_{\rm cut})$. 
 %
-We can also define an \textit{effective coupling strength} $M_\text{cut}=g_* \, M_*\,,$ where $g_*$ is a free parameter that substitutes the parameter $M_\text{cut}$, and therefore derive exclusions on $M_*$ as a function of $(m_\text{DM},g_*)$. This allows us to see how much of the theoretically allowed parameter space has been actually tested and how much is still unexplored; For example, in the $Z'$-type model considered above, $g_*$ is equal to $\sqrt{g_\text{DM}g_q}$.
+We can also define an \textit{effective coupling strength} $M_\text{cut}=g_* \, M_*\,,$ where $g_*$ is a free parameter that substitutes the parameter $M_\text{cut}$, and therefore derive exclusions on $M_*$ as a function of $(m_\text{DM},g_*)$. This allows us to see how much of the theoretically allowed parameter space has been actually tested and how much is still unexplored; For example, in the $Z^\prime$-type model considered above, $g_*$ is equal to $\sqrt{g_\text{DM}g_q}$.
 %
 The resulting plots are shown in \cite{Racco:2015dxa} for a particular effective operator. 
 
