--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -154,7 +154,7 @@ vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:scalarXS}
 \end{table}
 
 
-\subsection{Higgs+MET signal from 2HDM model with a Z' and a new pseudoscalar}
+\subsection{Higgs+MET signal from 2HDM model with a $Z^\prime$ and a new pseudoscalar}
 \label{subsec:Simulation}
 
 The leading order cross-sections from the Madgraph generator for the signal samples are listed in Tables~\ref{tab:SigSamplesZpA0}, ~ \ref{tab:SigSamplesZpDM}, ~ \ref{tab:SigSamplesZpZh}, for the various scan points recommended.  
@@ -164,7 +164,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 	\small
 	\begin{tabular}{|c|c|c|}
 		\hline
-		$M_{Z'}$ (GeV) & $M_{A^0}(GeV)$ & $\sigma$ [pb] \\ \hline \hline
+		$M_{Z^\prime}$ (GeV) & $M_{A^0}(GeV)$ & $\sigma$ [pb] \\ \hline \hline
 		600 & 300 & 1.55E-01  \\
 		600 & 400 & 2.18E-02  \\
 		800 & 300 & 8.30E-02  \\
@@ -192,8 +192,8 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 		\hline
 		\hline
 	\end{tabular}
-	\caption{LO cross-sections for $Z' \to A^0h$ samples, varying $M_{Z'}$ and $M_{A^0}$, keeping the DM mass fixed to 100 GeV. 
-    The columns from left to right describe $M_{Z'}$, $M_{A^0}$ and the sample cross section in pb.}
+	\caption{LO cross-sections for $Z^\prime \to A^0h$ samples, varying $M_{Z^\prime}$ and $M_{A^0}$, keeping the DM mass fixed to 100 GeV. 
+    The columns from left to right describe $M_{Z^\prime}$, $M_{A^0}$ and the sample cross section in pb.}
    \label{tab:SigSamplesZpA0}
 \end{table}
 
@@ -202,7 +202,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 	\small
 	\begin{tabular}{|c|c|c|c|}
 		\hline
-		$M_{Z'}$ (GeV) & $M_{A^0}(GeV)$ & $M_{DM} (GeV)$ & $\sigma$ [pb] \\ \hline \hline
+		$M_{Z^\prime}$ (GeV) & $M_{A^0}(GeV)$ & $M_{DM} (GeV)$ & $\sigma$ [pb] \\ \hline \hline
 		1000 & 300 & 10 & 3.76E-02  \\
 		1000 & 300 & 50 & 3.75E-02  \\
 		1200 & 600 & 10 & 3.64E-03  \\
@@ -210,7 +210,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 		\hline
 		\hline
 	\end{tabular}
-	\caption{LO cross-sections for $Z' \to A^0h$ samples, when varying $M_{DM}$. The columns from left to right describe $M_{Z'}$, $M_{A^0}$, $M_{DM}$, and the sample cross section in pb.}
+	\caption{LO cross-sections for $Z^\prime \to A^0h$ samples, when varying $M_{DM}$. The columns from left to right describe $M_{Z^\prime}$, $M_{A^0}$, $M_{DM}$, and the sample cross section in pb.}
 	\label{tab:SigSamplesZpDM}
 \end{table}
 
@@ -219,7 +219,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 	\small
 	\begin{tabular}{|c|c|}
 		\hline
-		$M_{Z'}$ (GeV) & $\sigma$ [pb] \\ \hline \hline
+		$M_{Z^\prime}$ (GeV) & $\sigma$ [pb] \\ \hline \hline
 		600 & 1.15E-01  \\
 		800 & 3.21E-02  \\
 		1000 & 1.13E-02  \\
@@ -228,6 +228,6 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 		\hline
 		\hline
 	\end{tabular}
-	\caption{LO cross-sections for $Z' \to Zh$ exclusive samples, varying $M_{Z'}$. The columns from left to right describe $M_{Z'}$ and the sample cross section in pb.}
+	\caption{LO cross-sections for $Z^\prime \to Zh$ exclusive samples, varying $M_{Z^\prime}$. The columns from left to right describe $M_{Z^\prime}$ and the sample cross section in pb.}
 	\label{tab:SigSamplesZpZh}
 \end{table}
