--- a/doc/tex/EWSpecificModels_CD.tex
+++ b/doc/tex/EWSpecificModels_CD.tex
@@ -262,7 +262,7 @@ in the equivalent models of Ref.~\cite{Crivellin:2015wva} as $k_2 = s_w^2*c_2$ a
 
 \textbf{[TODO: Linda will possibly complete/correct this subsection]} UV completions of 
 such operators where the dominant signature is a single photon or EW boson are possible, 
-for example through the exchange of a W' or a Z'. They are left as benchmarks for future searches as 
+for example through the exchange of a $W^\prime$ or a $Z^\prime$. They are left as benchmarks for future searches as 
 their implementation may require loop diagrams and need further studies beyond the timescale of this Forum. 
 
 As shown in Fig.~\ref{fig:EW_EFT5_Zlep_MET}
