--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -1,11 +1,11 @@
 Three benchmark simplified models \cite{Carpenter:2013xra,Berlin:2014cfa} 
 are recommended for Higgs+MET searches:
 \begin{itemize}
-	\item A model where a leptophobic vector mediator ($Z_B'$) is exchanged in the $s-$channel, 
+	\item A model where a leptophobic vector mediator ($Z_B^\prime$) is exchanged in the $s-$channel, 
 	radiates a Higgs or a $Z$ boson and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a));
 	\item A model where a scalar mediator $S$ couples to the SM only 
 	through the SM Higgs and decays to two DM particles (Fig.~\ref{fig:feyn_prod_monoH_S});
-	\item A model where a vector $Z'$ is produced resonantly and decays into a Higgs boson
+	\item A model where a vector $Z^\prime$ is produced resonantly and decays into a Higgs boson
 	plus an intermediate heavy pseudoscalar particle $A^0$, in turn decaying into two DM particles (Fig. \ref{fig:feyn_prod_monoH} (b)). 
 \end{itemize}
 
@@ -42,7 +42,7 @@ are recommended for Higgs+MET searches:
 		\fmf{photon,label={\Large $Z^\prime$}}{v1,v2}
 		\fmf{dashes}{v2,o3}
 		\fmflabel{\Large $h$}{o3}
-		\fmf{dots_arrow,label={\Large $A_0$},label.side=right}{v2,v3}
+		\fmf{dots_arrow,label={\Large $A^0$},label.side=right}{v2,v3}
 		\fmf{fermion,tension=2}{o2,v3,o1}
 		\fmflabel{\Large ${\bar{\chi}}$}{o1}
 		\fmflabel{\Large ${\chi}$}{o2}
@@ -51,10 +51,10 @@ are recommended for Higgs+MET searches:
 	}
 	\caption
 	{
-		Feynman diagrams of leading order processes leading to Higgs+MET events: a model with a vector mediator ($Z'$) 
+		Feynman diagrams of leading order processes leading to Higgs+MET events: a model with a vector mediator ($Z^\prime$) 
 		coupling with DM and with the Higgs boson $h$ \ref{subfig:modelMonoHZprimeqq}, and
 		a 2HDM model with a new invisibly decaying pseudoscalar $A^0$ 
-		from the decay of an on-shell resonance $Z'$ giving rise to a Higgs+MET signature~\ref{subfig:modelMonoHSimplifiedA0}.
+		from the decay of an on-shell resonance $Z^\prime$ giving rise to a Higgs+MET signature~\ref{subfig:modelMonoHSimplifiedA0}.
 	}
 	\label{fig:feyn_prod_monoH}
 \end{figure}
@@ -73,8 +73,8 @@ are recommended for Higgs+MET searches:
 			\fmf{dashes,label={\Large $h,,S$},label.side=right}{v2,v3}
 			\fmf{dashes}{v2,o3}
 			\fmflabel{\Large $h$}{o3}
-			\fmfv{label={\Large $b,,\theta$},label.a=120,label.distance=5w}{v2}
-			\fmfv{label={\Large $y_{\chi}$},label.a=-45,label.distance=5w}{v3}
+			\fmfv{label={$b,,\theta$},label.a=100,label.distance=3w}{v2}
+			\fmfv{label={$y_{\chi}$},label.a=-45,label.distance=5w}{v3}
 			\fmf{fermion}{o2,v3,o1}
 			\fmflabel{\Large ${\bar{\chi}}$}{o1}
 			\fmflabel{\Large ${\chi}$}{o2}
@@ -95,8 +95,8 @@ are recommended for Higgs+MET searches:
 			\fmf{dashes,label={\Large $h,,S$},label.side=right,label.d=5}{v2,v3}
 			\fmf{dashes}{v2,o3}
 			\fmflabel{\Large $h$}{o3}
-			\fmfv{label={\Large $b,,\theta$},label.a=120,label.distance=5w}{v2}
-			\fmfv{label={\Large $y_{\chi}$},label.a=-45,label.distance=5w}{v3}
+			\fmfv{label={$b,,\theta$},label.a=120,label.distance=3w}{v2}
+			\fmfv{label={$y_{\chi}$},label.a=-45,label.distance=5w}{v3}
 			\fmf{fermion}{o2,v3,o1}
 			\fmflabel{\Large ${\bar{\chi}}$}{o1}
 			\fmflabel{\Large ${\chi}$}{o2}
@@ -116,7 +116,7 @@ are recommended for Higgs+MET searches:
 		\fmf{dashes}{v2,o3}
 		\fmflabel{\Large $h$}{o3}
 		\fmf{dashes,label={\Large $h,,S$},label.side=right,label.d=5}{v1,v3}
-		\fmfv{label={\Large $y_{\chi}$},label.a=-45,label.distance=5w}{v3}
+		\fmfv{label={$y_{\chi}$},label.a=-45,label.distance=5w}{v3}
 		\fmf{fermion}{o2,v3,o1}
 		\fmflabel{\Large ${\bar{\chi}}$}{o1}
 		\fmflabel{\Large ${\chi}$}{o2}
@@ -132,13 +132,13 @@ are recommended for Higgs+MET searches:
 	\label{fig:feyn_prod_monoH_S}
 \end{figure}
 
-These models have a distinct kinematics, as shown in the comparison of the 
-MET spectra in Fig.~\ref{fig:METSimpMonoHiggs}, for high and low mediator masses. 
+These models are kinematically distinct from one another, as shown in the comparison of the 
+MET spectra in Fig.~\ref{fig:METSimpMonoHiggs} for high and low mediator masses. 
 Figure~\ref{fig:METSimpMonoHiggs} (a) shows the MET distribution 
-for models with high mediator masses ($m_{S} = 1$ TeV, $m_{Z'} = 1$ TeV, $m_{A0} = 1$ TeV)
+for models with high mediator masses ($m_{S} = 1$ TeV, $m_{Z^\prime} = 1$ TeV, $m_{A^0} = 1$ TeV)
 and DM mass of either 50 ($Z_B'$ and $A^0$ models) or 65 GeV (scalar mediator model).
 Figure~\ref{fig:METSimpMonoHiggs} (b)  shows the MET distribution 
-for models with low mediator masses ($m_{Z_B'} = 100$ GeV, $m_{Z'} = 1$ TeV, $m_{A0} = 100$ GeV)
+for models with low mediator masses ($m_{Z_B'} = 100$ GeV, $m_{Z^\prime} = 1$ TeV, $m_{A^0} = 100$ GeV)
 and DM mass of 1 TeV for all models. 
 	
 
@@ -156,13 +156,13 @@ and DM mass of 1 TeV for all models.
 \end{figure}
 
 
-\subsection{MET+Higgs from a baryonic Z'}
+\subsection{MET+Higgs from a baryonic $Z^\prime$}
 
 The model shown in Fig.~\ref{fig:feyn_prod_monoH} (a)
-postulates a new gauge boson $Z'$ corresponding to a new $U(1)_B$ baryon 
+postulates a new gauge boson $Z^\prime$ corresponding to a new $U(1)_B$ baryon 
 number symmetry. The stable baryonic states included in this model are the DM candidate particles.
-The mass of the $Z'$ boson is acquired through a baryonic Higgs $h_B$, which mixes with the 
-SM Higgs boson. The interactions between the $Z'$, the quarks and the DM are described by 
+The mass of the $Z^\prime$ boson is acquired through a baryonic Higgs $h_B$, which mixes with the 
+SM Higgs boson. The interactions between the $Z^\prime$, the quarks and the DM are described by 
 the following Lagrangian:   
 
 \be \label{ZprimeDM}
@@ -175,8 +175,8 @@ the following Lagrangian:
 \ee
 
 The quark couplings \gq are fixed to be equal to one third of the gauge coupling $g_B$, 
-while the DM coupling to the $Z'$ are proportional to the baryon number and to the gauge coupling 
-($g_{chi} = B g_B$). No leptonic couples of the $Z'$ are allowed, thus evading dilepton constraints. 
+while the DM coupling to the $Z^\prime$ are proportional to the baryon number and to the gauge coupling 
+($g_{\chi} = B g_B$). No leptonic couplings of the $Z^\prime$ are allowed, thus evading dilepton constraints. 
 After incorporating the mixing of the baryonic and SM Higgs bosons, this model is 
 is described by the following Lagrangian term at energies below $m_{Z^\prime}$: 
  \be \label{U1Beft}
@@ -185,9 +185,9 @@ is described by the following Lagrangian term at energies below $m_{Z^\prime}$:
 
 The first term of this equation gives rise to a term that is equivalent to the 
 radiation of a jet (or another EW gauge boson) in the initial state. 
-The second term describes the interaction between the $Z'$ and the SM Higgs boson,
-via the coupling $g_{h Z^\prime Z^\prime} = \frac{m_Z'^2 sin\theta}{v_B}$, where
-$sin\theta$ is the mixing angle between the Higgs and the $Z'$ and $v_B$ is the
+The second term describes the interaction between the $Z^\prime$ and the SM Higgs boson,
+via the coupling $g_{h Z^\prime Z^\prime} = \frac{m_{Z^\prime}2 sin\theta}{v_B}$, where
+$sin\theta$ is the mixing angle between the Higgs and the $Z^\prime$ and $v_B$ is the
 Baryonic Higgs vev. 
 
 %TODO: 
@@ -196,17 +196,16 @@ Baryonic Higgs vev.
 
 \subsubsection{Parameter scan} 
 
-Overall, this model is described by six parameters:
+The model is described by six parameters:
 \begin{enumerate}
-	\item the mediator mass \mmed, (also referred to as $m_{Z'}$)
+	\item the mediator mass \mmed, (also referred to as $m_{Z^\prime}$)
 	\item mass of dark matter, $m_{DM}$
-	\item coupling of $Z'$ mediator to dark matter, \gdm
+	\item coupling of $Z^\prime$ mediator to dark matter, \gdm
 	\item coupling of the mediator to quarks, $g_q$
 	\item mixing angle between baryonic Higgs and SM-like Higgs boson, $\sin\theta$
-	\item coupling of the mediator to SM-like Higgs boson, $g_{hZ'Z'}$
+	\item coupling of the mediator to SM-like Higgs boson, $g_{hZ^\prime Z^\prime}$
 \end{enumerate}
-The width of the mediator is calculated using all possible decays, 
-namely to quarks, to pairs of DM particles if kinematically allowed, 
+The width of the $Z^\prime$ mediator is calculated using all possible decays to SM particles (quarks) and to pairs of DM particles if kinematically allowed.
 
 The dependence of the missing transverse momentum (MET) on the model parameters 
 is studied by varying the parameters one at a time. The variation of parameters 
@@ -217,19 +216,20 @@ varying $m_{DM}$ with the other parameters fixed does not affect the MET distrib
 the distribution broadens significantly in the case of an off-shell mediator. 
 For this reason, the same grid in \mmed, \mdm as for the vector mediator
 of the jet+MET search (Table~\ref{tab:mDMmmedScan_VA}) is chosen as a starting point. 
-The coupling $g_{hZ'Z'}$, along with $g_q$ and $g_{DM}$, are subject to perturbativity bounds:
-$$g_q, g_\chi < 4\pi $$ and $$  g_{hZ'Z'} < \sqrt{4\pi}m_{Z'}\sin\theta$$ 
-The value $g_{hZ'Z'}/m_{Z'} = 1.0$ is chosen as a benchmark value for the generation 
+The coupling $g_{hZ^\prime Z^\prime}$, along with $g_q$ and $g_{DM}$, are subject to perturbativity bounds:
+$$g_q, g_\chi < 4\pi $$ and $$  g_{h Z^\prime Z^\prime} < \sqrt{4\pi}m_{Z^\prime}\sin\theta$$ 
+The value $g_{h Z^\prime Z^\prime}/m_{Z^\prime} = 1.0$ is chosen as a benchmark value for the generation 
 of Monte Carlo samples since it maximizes the cross section (as shown in the following paragraph)
 without violating the bounds. The mediator-DM coupling \gdm is fixed to 1, and  
 the mediator-quark $g_{q}$ coupling is fixed to 1/3. 
-Since the kinematics does not change as a function of these parameters, 
-results for other values of  $g_{hZ'Z'}/m_{Z'}$, \gdm and \gq can be 
+The kinematic distributions do not change as a function of these parameters, so 
+results for other values of  $g_{h Z^\prime Z^\prime}/m_{Z^\prime}$, \gdm and \gq can be 
 obtained through rescaling by the appropriate cross sections. 
 
-More detailed studies are required to estimate the reach of the analysis with respect to all points in the grid
-and therefore decide on a smaller set of grid points to be generated; 
-those are left to the individual analyses. 
+Figs~\ref{fig:VectorHbb_100} and ~\ref{fig:VectorHbb_1000} show the kinematic distributions for the two leading jets
+in the $H \to \bar b b$ decay channel, for two values of the mediator mass and varying the DM mass.  
+
+Analyses should perform further studies, beyond those studies performed for the forum, to estimate the reach of the analysis with respect to all points in the grid and therefore decide on a smaller set of grid points to be generated.
 %TODO: can we get sensitivity to all the points for all signatures?
 
 \begin{figure}[hbpt!]
@@ -238,7 +238,7 @@ those are left to the individual analyses.
 	\caption{Missing transverse momentum distributions at generator level in the vector 
 		mediator scenario for different values of: the mediator-dark matter coupling \gdm (left),
 		and the coupling between the mediator and the SM-like Higgs boson, scaled by the mediator mass, 
-		$g_{hZ'Z'}/m_{Z'}$ (right).
+		$g_{h Z^\prime Z^\prime}/m_{Z^\prime}$ (right).
 		\label{fig:metVectorCoupling}}
 \end{figure}
 
@@ -251,9 +251,6 @@ those are left to the individual analyses.
 		\label{fig:metVectorMass} }
 \end{figure}
 
-
-Figs~\ref{fig:VectorHbb_100} and ~\ref{fig:VectorHbb_1000} show the kinematic distributions for the two leading jets
-in the $H \to \bar b b$ decay channel, for two values of the mediator mass and varying the DM mass.  
 
 \begin{figure}[hbpt!]
 	\centering
@@ -277,8 +274,8 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\hfill
-	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector $Z'$ simplified model, 
-		when fixing the $Z'$ mass to 100 GeV and varying the DM mass. 
+	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector $Z^\prime$ simplified model, 
+		when fixing the $Z^\prime$ mass to 100 GeV and varying the DM mass. 
 		\label{fig:VectorHbb_100}}
 \end{figure}
 
@@ -300,19 +297,18 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_subleading_b_eta} %\label{fig:met_cmp_low}
 	}
 	\hfill
-	\subfloat[Angular distance between the two leading $b-$jets]{
+	\subfloat[\text{Angular separation of the two leading $b$-jets}]{
 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
-	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector $Z'$ simplified model, 
-		when fixing the $Z'$ mass to 1000 GeV and varying the DM mass. 
+	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector $Z^\prime$ simplified model, 
+		when fixing the $Z^\prime$ mass to 1000 GeV and varying the DM mass. 
 		\label{fig:VectorHbb_1000}}
 \end{figure}
-
 
 \subsubsection{Cross-section scaling}
 
 The dependence of the cross section of the $pp \rightarrow H\chi\bar{\chi}$ process 
-on $g_{hZ'Z'}$ is shown in Figure~\ref{fig:vectorXSdeps}. 
+on $g_{h Z^\prime Z^\prime}$ is shown in Figure~\ref{fig:vectorXSdeps}. 
 The curves have been fitted to second-order polynomials. 
 For $m_{med} = 100$ GeV, the fit function is 
 $$y = -0.12 - 3.4\times10^{-3}x + 2.7\times10^{-4}x^2$$.
@@ -323,10 +319,12 @@ is $$y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2$$
 	\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zprime_xs_med_100}
 	\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zprime_xs_med_1000}
 	\caption{Cross section of the $pp \rightarrow H\chi\bar{\chi}$ process as a function of 
-		$g_{hZ'Z'}$ for $m_{Z'} = 100$ GeV (left) 
-		and $m_{Z'} = 1$ TeV (right). The fit functions are shown in the text. 
+		$g_{h Z^\prime Z^\prime}$ for $m_{Z^\prime} = 100$ GeV (left) 
+		and $m_{Z^\prime} = 1$ TeV (right). The fit functions are shown in the text. 
 		\label{fig:vectorXSdeps}}
 \end{figure}
+
+\clearpage
 
 \subsection{MET+Higgs from a scalar mediator}
 
@@ -342,28 +340,28 @@ where $a,b$ are new physics couplings and $\lambda_h$ is the Higgs quartic.
 
 The additional Lagrangian terms for this model are: 
 \be \label{LintScalar2}
-L \supset - y_\chi \bar\chi \chi (  cos\theta S - sin\theta h ) - \frac{m_q}{v} \bar q q (cos\theta h + sin\theta S )  \,
+L \supset - y_\chi \bar\chi \chi (  cos\theta\:S - sin\theta\: h ) - \frac{m_q}{v} \bar q q (cos\theta\: h + sin\theta\: S )  \,
 \ee
 where $\theta$ is the mixing angle between the Higgs boson and the new scalar. 
 
-Mono-Higgs signals in this model arise through processes shown in Fig.~\ref{fig:feyn_prod_monoH_S} (a,b), or through 
+Mono-Higgs signals in this second model arise through processes shown in Fig.~\ref{fig:feyn_prod_monoH_S} (a,b), or through 
 the radiation of a Higgs boson from the  $t$ quark in the production loop, in Fig.~\ref{fig:feyn_prod_monoH_S} (c). 
 The first two processes depend on the $h^2 S$ and $h S^2$ cubic terms in Eq.~\eqref{singlethiggsmix}.  
 At leading order in $\sin\theta$, these terms are
 \be
-V_{\rm cubic} \approx \frac{\sin\theta}{v} ( 2 m_h^2 + m_S^2) h^2 S  + b v h S^2 + ...
+V_{\rm cubic} \approx \frac{\sin\theta}{v} ( 2 m_h^2 + m_S^2) h^2 S  + b \, v \, h \, S^2 + ...
 \ee
 with $a$ and $\lambda_h$ expressed in terms of $\sin\theta$ and $m_h^2$, respectively.  
 At leading order of $\sin\theta$, the $h^2 S$ term is fixed once the mass eigenvalues $m_h, m_S$ 
-and mixing angle are specified.  The $h S^2$ term is not fixed and remains a free parameter of the model, depending on 
+and mixing angle are specified.  The $h\,S^2$ term is not fixed and remains a free parameter of the model, depending on 
 the new physics coupling $b$. 
 
 \subsubsection{Parameter scan}
 
-This model is described by five parameters: 
+The model is described by five parameters: 
 
 \begin{enumerate}
-	\item the Yukawa coupling of heavy scalar to dark matter (DM), $g_{DM}$ (also referred to as $y_\chi$) 
+	\item the Yukawa coupling of heavy scalar to dark matter, $g_{DM}$ (also referred to as $y_\chi$) 
 	\item the mixing angle between heavy scalar and SM-like Higgs boson, $\sin\theta$;
 	\item the new physics coupling, $b$;
 	\item mass of heavy scalar, $m_{S}$, also termed \mmed;
@@ -419,7 +417,7 @@ those are left to the individual analyses. \textbf{[TODO: can we get sensitivity
 	\end{center}
 \end{figure}
 
-Figs~\ref{fig:ScalarHbb_100} and ~\ref{fig:ScalarHbb_1000} show the kinematic distributions for the two leading jets
+Figs. ~\ref{fig:ScalarHbb_100} and ~\ref{fig:ScalarHbb_1000} show the kinematic distributions for the two leading jets
 in the $H \to \bar b b$ decay channel, for two values of the mediator mass and varying the DM mass.  
 
 \begin{figure}[hbpt!]
@@ -446,7 +444,7 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 	\hfill
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the scalar simplified model, 
 		when fixing the new scalar mass to 100 GeV and varying the DM mass. 
-		\label{fig:ScalarHbb}}
+		\label{fig:ScalarHbb_100}}
 \end{figure}
 
 \begin{figure}[hbpt!]
@@ -477,18 +475,18 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 
 
 %%%
-\subsection{Higgs+MET signal from 2HDM model with a Z' and a new pseudoscalar}
+\subsection{Higgs+MET signal from 2HDM model with a $Z^\prime$ and a new pseudoscalar}
 
-In this simplified model~\cite{Berlin:2014cfa}, a new $Z'$ resonance decays to a Higgs boson $h$ 
+In this simplified model~\cite{Berlin:2014cfa}, a new $Z^\prime$ resonance decays to a Higgs boson $h$ 
 plus a heavy pseudoscalar state 
-$A$ in the 2HDM framework, which in turn decays to a DM pair. This model is 
+$A^0$ in the 2HDM framework, which in turn decays to a DM pair. This model is 
 represented in the diagram in Fig. \ref{fig:feyn_prod_monoH} (b).
 
 
-The motivation for coupling the dark matter to the pseudoscalar is that dark matter coupling to higgs or $Z'$ is generically 
+The motivation for coupling the dark matter to the pseudoscalar is that dark matter coupling to higgs or $Z^\prime$ is generically 
 constrained by other signal channels and direct detection. 
-An advantage of including this model is that it has different kinematics  due to the on-shell $Z'$ production, 
-where for heavy $Z'$ masses the MET and pT spectra are much harder.
+An advantage of including this model is that it has different kinematics  due to the on-shell $Z^\prime$ production, 
+where for heavy $Z^\prime$ masses the MET and pT spectra are much harder.
 This model can satisfy electroweak precision tests and constraints from dijet resonance searches, 
 and still give a potentially observable Higgs+MET signal.
  
@@ -522,10 +520,10 @@ limit where $h$ has SM-like couplings to fermions and
 gauge bosons as per Ref.~\cite{Craig:2013hca}, and $\tan{\beta} \ge 0.3$ 
 as implied from the perturbativity of the top Yukawa coupling. 
   %For the $ b \bar{b}$ decay channel, the signature of the signal we are searching for is a pair of boosted WIMPs recoiling against two $b$ jets. 
-The Higgs vevs lead to $Z-Z'$ mass mixing, with a mixing parameter given by 
+The Higgs vevs lead to $Z-Z^\prime$ mass mixing, with a mixing parameter given by 
  \begin{align}
- \epsilon & \equiv \frac{1}{M_{Z'}^2 - M_Z^2} \frac{g g_z}{2 \cos{\theta_w}} ( z_d v_d^2 + z_u v_u^2) \nonumber \\
- & =  \frac{(M_Z^0)^2}{M_{Z'}^2 - M_Z^2} \frac{2 g_z \cos \theta_w}{g}  z_u \sin^2 \beta.
+ \epsilon & \equiv \frac{1}{M_{Z^\prime}^2 - M_Z^2} \frac{g g_z}{2 \cos{\theta_w}} ( z_d v_d^2 + z_u v_u^2) \nonumber \\
+ & =  \frac{(M_Z^0)^2}{M_{Z^\prime}^2 - M_Z^2} \frac{2 g_z \cos \theta_w}{g}  z_u \sin^2 \beta.
  \label{eq:epsilon}
  \quad
  \end{align}
@@ -533,28 +531,28 @@ The Higgs vevs lead to $Z-Z'$ mass mixing, with a mixing parameter given by
 The production cross section for this model scales as $(g_z)^2$, as the decay width for this process
 to leading order in $\epsilon$ (Eq.~\ref{eq:epsilon}) is
 \begin{equation}
-\Gamma_{Z' \to hA^0} =  (g_z \cos \alpha \cos \beta)^2 \frac{|p|}{24 \pi} \frac{|p|^2}{M_{Z'}^2}.
+\Gamma_{Z^\prime \to h A^0} =  (g_z \cos \alpha \cos \beta)^2 \frac{|p|}{24 \pi} \frac{|p|^2}{M_{Z^\prime}^2}.
 \end{equation}
 where the center of mass momentum for the decay products $|p| =
-\frac{1}{2 M_{Z'}} \lambda^{1/2}(M_{Z'}^2,m_h^2, m_{A^0}^2)$, and
-$\lambda$ is the K\"{a}llen triangle function.  
+\frac{1}{2 M_{Z^\prime}} \lambda^{1/2}(M_{Z^\prime}^2,m_h^2, m_{A^0}^2)$, and
+$\lambda$ is the K\"{a}llen triangle function.\footnote{\begin{align*}\lambda(c_1,c_2,c_3) \equiv\;33& c_1^2 + c_2^2 + c_3^2\\ &- 2(c_1 c_2 + c_2 c_3 + c_3 c_1)\end{align*}}
    
 %  Diagonalizing the gauge
-% boson mass matrix, the tree-level masses of the $Z$ and $Z'$ bosons are given by
+% boson mass matrix, the tree-level masses of the $Z$ and $Z^\prime$ bosons are given by
 % \begin{align}
-% M_Z^2 &\approx ( M_{Z}^0)^2  - \epsilon^2 \left[( M_{Z'}^0)^2 - ( M_{Z}^0)^2 \right] \nonumber \\
-% M_{Z'}^2 &\approx ( M_{Z'}^0)^2 + \epsilon^2 \left[( M_{Z'}^0)^2 - ( M_{Z}^0)^2 \right]
+% M_Z^2 &\approx ( M_{Z}^0)^2  - \epsilon^2 \left[( M_{Z^\prime}^0)^2 - ( M_{Z}^0)^2 \right] \nonumber \\
+% M_{Z^\prime}^2 &\approx ( M_{Z^\prime}^0)^2 + \epsilon^2 \left[( M_{Z^\prime}^0)^2 - ( M_{Z}^0)^2 \right]
 % \quad ,
 % \label{eq:Zpmasses}
 % \end{align}
 % where $(M_Z^0)^2 = g^2(v_d^2+ v_u^2)/(4\cos^2{\theta_w}) $ and
-% $(M_{Z'}^0)^2 = g_z^2 ( z_d^2 v_d^2 + z_u^2 v_u^2 + z_\phi^2
+% $(M_{Z^\prime}^0)^2 = g_z^2 ( z_d^2 v_d^2 + z_u^2 v_u^2 + z_\phi^2
 % v_\phi^2)$ are the mass-squared values in the absence of mixing. The
 % result above is accurate to order $\epsilon^2$, where $\epsilon$ is
 % a small mixing parameter given by
 % \begin{align}
-% \epsilon & \equiv \frac{1}{M_{Z'}^2 - M_Z^2} \frac{g g_z}{2 \cos{\theta_w}} ( z_d v_d^2 + z_u v_u^2) \nonumber \\
-% & =  \frac{(M_Z^0)^2}{M_{Z'}^2 - M_Z^2} \frac{2 g_z \cos \theta_w}{g}  z_u \sin^2 \beta.
+% \epsilon & \equiv \frac{1}{M_{Z^\prime}^2 - M_Z^2} \frac{g g_z}{2 \cos{\theta_w}} ( z_d v_d^2 + z_u v_u^2) \nonumber \\
+% & =  \frac{(M_Z^0)^2}{M_{Z^\prime}^2 - M_Z^2} \frac{2 g_z \cos \theta_w}{g}  z_u \sin^2 \beta.
 % \label{eq:epsilon}
 % \quad
 % \end{align}
@@ -565,9 +563,9 @@ $\lambda$ is the K\"{a}llen triangle function.
  \begin{itemize}
  	\item the pseudoscalar mass $M_{A^0}$,
  	\item the DM mass \mdm, 	 
- 	\item the $Z'$ mass, $M_{Z'}$,
+ 	\item the $Z^\prime$ mass, $M_{Z^\prime}$,
     \item $\tan{\beta} (\equiv v_u/v_d)$,
- 	\item the $Z'$ coupling strength $g_z$. 
+ 	\item the $Z^\prime$ coupling strength $g_z$. 
  \end{itemize}
 
  To study the signal production and kinematic dependencies on these parameters, 
@@ -595,13 +593,13 @@ we recommend to fix $\tan{\beta}$ to unity in the signal generation.
 \end{figure}
 
 Similarly, variations of $g_z$ do not lead to any kinematic changes. 
-The value of $g_z$ for a given $M_{Z'}$ and $\tan \beta$ can be set according to the maximum value allowed by electroweak global 
+The value of $g_z$ for a given $M_{Z^\prime}$ and $\tan \beta$ can be set according to the maximum value allowed by electroweak global 
 fits and dijet constraints, as described in~\cite{Berlin:2014cfa}. Since this parameter does not influence the kinematics, 
 we leave it up to individual analyses on whether they generate benchmark points only according to these external constraints
 \textbf{[TODO: add link to section as in summary. This is the same sentence we will put in for the mono-b model]}.   
-%For $Z'$ masses below $\sim 1.3$ TeV and larger $\tan \beta$, the $\rho_0$ constraint on $g_z$ is stronger than 
+%For $Z^\prime$ masses below $\sim 1.3$ TeV and larger $\tan \beta$, the $\rho_0$ constraint on $g_z$ is stronger than 
 %dijet limits, while for $\tan \beta \lesssim 0.6$,
-%the dijet constraints dominate even at low $Z'$ masses. 
+%the dijet constraints dominate even at low $Z^\prime$ masses. 
 
 Since the DM pair are produced as a result of the decay of $A^0$, there are minimal kinematic changes when varying $M_{DM}$ 
 as long as $M_{DM}<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in Fig.~\ref{fig:DMH_mdm} and~
@@ -616,7 +614,7 @@ as long as $M_{DM}<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in 
 	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_dphi12}
 	}
-	\caption{Kinematic distributions of the signal process varying $M_{DM}$: minimal kinematic dependency on $M_{DM}$ as expected when $A^0$ is produced on-shell. Plots shown for $M_{Z'}=1000$~GeV, $M_{A^0}=300$~GeV.}
+	\caption{Kinematic distributions of the signal process varying $M_{DM}$: minimal kinematic dependency on $M_{DM}$ as expected when $A^0$ is produced on-shell. Plots shown for $M_{Z^\prime}=1000$~GeV, $M_{A^0}=300$~GeV.}
 	\label{fig:DMH_mdm}
 \end{figure}
  
@@ -624,20 +622,20 @@ as long as $M_{DM}<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in 
   	\begin{center}
   		\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zp2hdm_a0_300_MET_et_Log}
   		\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zp2hdm_a0_1000_MET_et_Log}
-  		\caption{Missing transverse momentum distributions at generator level in the Z'+2HDM 
+  		\caption{Missing transverse momentum distributions at generator level in the $Z^\prime$+2HDM 
   			scenario for different values of the dark matter mass $m_{DM}$, with 
-  			$m_{Z'}$ = 1 TeV and $m_{A_0}$ = 300 GeV (left) and $m_{A_0}$ = 1 TeV (right).
+  			$m_{Z^\prime}$ = 1 TeV and $m_{A^0}$ = 300 GeV (left) and $m_{A^0}$ = 1 TeV (right).
   			\label{fig:zprimeDecay}}
   	\end{center}
   \end{figure}
   
-We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $M_{DM}=100$~GeV. For these values, we scan the 2-D parameter space of ${M_{Z'}, M_{A^0}}$ with $M_{Z'}=600, 800, 1000, 1200, 1400$~GeV, and $M_{A^0}=300, 400, 500, 600, 700, 800$~GeV with $M_{A^0} < M_{Z'}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\ref{Berlin2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{Z'} \sim 1.5$~TeV.
-For the parameter scan, the DM mass is fixed to 100 GeV. For two $M_{Z'}$, $M_{A^0}$ value sets, we vary the DM mass to obtain sample cross section for rescaling results. 
+We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $M_{DM}=100$~GeV. For these values, we scan the 2-D parameter space of ${M_{Z^\prime}, M_{A^0}}$ with $M_{Z^\prime}=600, 800, 1000, 1200, 1400$~GeV, and $M_{A^0}=300, 400, 500, 600, 700, 800$~GeV with $M_{A^0} < M_{Z^\prime}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\ref{Berlin2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{Z^\prime} \sim 1.5$~TeV.
+For the parameter scan, the DM mass is fixed to 100 GeV. For two $M_{Z^\prime}$, $M_{A^0}$ value sets, we vary the DM mass to obtain sample cross section for rescaling results. 
 All LO cross sections for the various parameter scan points are reported in Appendix~\ref{app:EWSpecificModels_Appendix}.
 The parameter scan excludes the off-shell region, as the cross-sections are suppressed and the LHC would not have any
 sensitivity to these benchmark points in early data. 
 
-The kinematic distributions with varying $M_{Z'}$ for fixed $M_{A^0}$ are shown in Fig.~\ref{fig:DMH_mzp}, while the dependency on $M_{A^0}$ is shown in Fig.~\ref{fig:DMH_ma0}. 
+The kinematic distributions with varying $M_{Z^\prime}$ for fixed $M_{A^0}$ are shown in Fig.~\ref{fig:DMH_mzp}, while the dependency on $M_{A^0}$ is shown in Fig.~\ref{fig:DMH_ma0}. 
   
  \begin{figure}[h!]
  	\centering
@@ -657,7 +655,7 @@ The kinematic distributions with varying $M_{Z'}$ for fixed $M_{A^0}$ are shown 
  		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_mbb}
  	}
  	
- 	\caption{Kinematic distributions of the signal process varying $M_{Z'}$, for $M_{DM}=100$~GeV, $M_{A^0}=300$~GeV.}
+ 	\caption{Kinematic distributions of the signal process varying $M_{Z^\prime}$, for $M_{DM}=100$~GeV, $M_{A^0}=300$~GeV.}
  	\label{fig:DMH_mzp}
  \end{figure}
   
@@ -678,17 +676,17 @@ The kinematic distributions with varying $M_{Z'}$ for fixed $M_{A^0}$ are shown 
    	\subfloat[Dijet invariant mass]{
    		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_mbb}
    	}
-   	\caption{Kinematic distributions of the signal process varying $M_{A^0}$, for $M_{DM}=100$~GeV, $M_{Z'}=1000$~GeV.}
+   	\caption{Kinematic distributions of the signal process varying $M_{A^0}$, for $M_{DM}=100$~GeV, $M_{Z^\prime}=1000$~GeV.}
    	\label{fig:DMH_ma0}
    \end{figure}
       
  This model also allows for an additional source of Higgs plus MET signal with a similar kinematics (Fig.~\ref{fig:DMH_zpincl}, shown with detector simulation 
- samples) to the signal process from the decay of $Z' \to h Z$, where the $Z$ decays invisibly. The partial decay width for the $Z'$ is:
+ samples) to the signal process from the decay of $Z^\prime \to h Z$, where the $Z$ decays invisibly. The partial decay width for the $Z^\prime$ is:
  \begin{equation}
- \Gamma_{Z' \to hZ}  = (g_z \cos \alpha \sin \beta)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{Z'}^2} + 3 \frac{M_Z^2}{M_{Z'}^2} \right),
+ \Gamma_{Z^\prime \to hZ}  = (g_z \cos \alpha \sin \beta)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{Z^\prime}^2} + 3 \frac{M_Z^2}{M_{Z^\prime}^2} \right),
  \end{equation}
-The values for the $Z'$ masses scanned for those samples should follow those of the previous samples, 
-namely values of $M_{Z'}=600, 800, 1000, 1200, 1400$~GeV.  This signal process has no $M_A$ dependence. 
+The values for the $Z^\prime$ masses scanned for those samples should follow those of the previous samples, 
+namely values of $M_{Z^\prime}=600, 800, 1000, 1200, 1400$~GeV.  This signal process has no $M_A$ dependence. 
  
 \begin{figure}[h!]
   	\centering
@@ -707,7 +705,7 @@ namely values of $M_{Z'}=600, 800, 1000, 1200, 1400$~GeV.  This signal process h
   	\subfloat[Dijet invariant mass]{
   		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_mjj}
   	}
-  	\caption{Kinematic distributions of $Z' \to A^0h$ exclusive production, $Z' \to Zh$ exclusive production and $Z'$ inclusive production for $M_{Z'}=1000$~GeV and $M_{A^0}=300$~GeV}
+  	\caption{Kinematic distributions of $Z^\prime \to A^0h$ exclusive production, $Z^\prime \to Zh$ exclusive production and $Z^\prime$ inclusive production for $M_{Z^\prime}=1000$~GeV and $M_{A^0}=300$~GeV}
   	\label{fig:DMH_zpincl}
 \end{figure}
 
@@ -737,23 +735,23 @@ is left to future studies.
  The two couplings that can be changed in the Madgraph model follow the nomenclature below:
  \begin{itemize}
  	\item \texttt{Tb} - $\tan \beta$
- 	\item \texttt{gz} - $g_z$, gauge coupling of $Z'$ to quarks
+ 	\item \texttt{gz} - $g_z$, gauge coupling of $Z^\prime$ to quarks
  \end{itemize}
  The other couplings are not changed, including \texttt{gx} (the $A \bar \chi \chi$ coupling) which has little impact on the signal. 
  $\sin \alpha$ is fixed internally such that $\cos (\beta-\alpha) = 0$. 
- The width of the $Z'$ and $A$ can be computed automatically within Madgraph. 
+ The width of the $Z^\prime$ and $A$ can be computed automatically within Madgraph. 
  The couplings here don't affect the signal kinematics, so they can be fixed to default values 
  and then the signal rates can be scaled appropriately. 
  
 The nomenclature for the masses in the Madgraph model is:
  \begin{itemize}
- 	\item \texttt{MZp} - PDG ID 32 - $Z'$
+ 	\item \texttt{MZp} - PDG ID 32 - $Z^\prime$
  	\item \texttt{MA0} - PDG ID 28 - $A$
  	\item \texttt{MX} - PDG ID 1000022 - dark matter particle
  \end{itemize}
  
 The other masses are unchanged and do not affect the result. 
- Both $Z' \to hZ(\bar \nu \nu)$ and  $Z' \to hA(\bar \chi \chi)$ contribute to the final state, scaling
+ Both $Z^\prime \to hZ(\bar \nu \nu)$ and  $Z^\prime \to hA(\bar \chi \chi)$ contribute to the final state, scaling
  different with model parameters. We recommend to generate them separately, 
  and then add the two signal processes together weighted by cross sections.
  % These signals should be generated separately since they have different $\tan \beta, M_A$ dependence.  
